[gd_scene load_steps=13 format=2]

[ext_resource path="res://Art/Bosses/Stone Golem/arm_projectile_glowing.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Bosses/BossesUtils/Missile.gd" type="Script" id=2]
[ext_resource path="res://prefabs/Collision/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://prefabs/Effects/Explosion.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 17.5, 5.5 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 100, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 200, 100, 100, 100 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[node name="Missile" type="Node2D"]
script = ExtResource( 2 )
explosionEffect = ExtResource( 4 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
collision_mask = 4
fireDamage = 25.0
knockbackForce = 120.0
knockbackSpeed = 150.0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -5.5, -0.5 )
shape = SubResource( 8 )

[node name="Hitbox2" parent="." instance=ExtResource( 3 )]
collision_mask = 8
damage = 0.0
fireDamage = 5.0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox2"]
position = Vector2( -5.5, -0.5 )
shape = SubResource( 8 )
disabled = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -33, 12 )
frames = SubResource( 7 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
autostart = true

[node name="HitBossDelay" type="Timer" parent="."]

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="area_entered" from="Hitbox2" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox2" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="HitBossDelay" to="." method="_on_HitBossDelay_timeout"]
